@@ -37,6 +37,7 @@ public:
   static std::string dateFormat;
   static bool searchCaseSensitive;
   static bool searchUsingRegex;
+  static bool isoEnabled;
 
   enum type {type_unknown, type_boolean, type_integer, type_real, type_string,
              type_date, type_duration};
