@@ -9,7 +9,9 @@ New commands in taskwarrior 2.4.1
 
 New configuration options in taskwarrior 2.4.1
 
-  -
+  - The 'date.iso' setting allows you to enable (default) or disable support
+    for ISO-8601 dates.  This is because some of you have 'dateformat' settings
+    that conflict.
 
 Newly deprecated features in taskwarrior 2.4.1
 
